Atualização final teste

--- a/python/CSVtreino-Ba.ipynb
+++ b/python/CSVtreino-Ba.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c1a5e68d-b417-4477-8ced-39b388168841",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.preprocessing import StandardScaler\n"
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
